# agentic-starter-kits

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  run_llama_server.yaml  template.env  tracing.md
.claude/skills/create-tracing-module/: SKILL.md
.claude/skills/integrate-tracing/: SKILL.md
.claude/skills/review-tracing-code/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: agent-deployment-test.yaml
agents/a2a/langgraph_crewai_agent/: Makefile  README.md
agents/a2a_langgraph_crewai/: .dockerignore  README.md  deploy.sh  init.sh  pyproject.toml  template.env
agents/a2a_langgraph_crewai/k8s/: deployment-crew.yaml  deployment-langgraph.yaml
agents/autogen/mcp_agent/: .env.example  Makefile  README.md  pyproject.toml  template.env
agents/base/crewai-websearch-agent/: README.md  main.py
agents/base/crewai_websearch_agent/: README.md  main.py  pyproject.toml  template.env
agents/base/langgraph_react_agent/: README.md  main.py  template.env
agents/base/llamaindex_websearch_agent/: README.md  main.py  requirements.txt  template.env
agents/base/openai_responses_agent/: README.md  main.py  template.env
agents/google/adk/: .env.example  Makefile  README.md  deploy.sh  init.sh  main.py  pyproject.toml
agents/google/adk/examples/: ai_service.py
agents/google/adk/k8s/: deployment.yaml  route.yaml  service.yaml
agents/google/adk/src/adk_agent/: agent.py  tools.py
charts/agent/: values.yaml
docs/: adding-behavioral-tests.md  local-development.md  openshift-deployment.md
(+102 files in other folders)
